--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
     <p class="lead">Por favor, elige una opción:</p>
     <div class="d-flex justify-content-center gap-3 mt-4">
         <a href="{% url 'login' %}" class="btn btn-primary btn-lg">Iniciar Sesión</a>
-        <a href="{% url 'register' %}" class="btn btn-success btn-lg">Registrarse</a>
+        <a href="{% url 'registro' %}" class="btn btn-success btn-lg">Registrarse</a>
     </div>
 </div>
 {% endblock %}
