--- a/templates/libros/base.html
+++ b/templates/libros/base.html
@@ -27,7 +27,7 @@
                             <a class="nav-link" href="{% url 'login' %}">Iniciar Sesión</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'register' %}">Registrarse</a>
+                            <a class="nav-link" href="{% url 'registro' %}">Registrarse</a>
                         </li>
                     {% endif %}
                 </ul>
