--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 {% block content %}
 <div class="container mt-5">
     <div class="row justify-content-center">
@@ -28,7 +29,7 @@
                     </form>
                     <hr>
                     <div class="text-center">
-                        <p>¿No tienes una cuenta? <a href="{% url 'register' %}">Regístrate aquí</a></p>
+                        <p>¿No tienes una cuenta? <a href="{% url 'registro' %}">Regístrate aquí</a></p>
                     </div>
                 </div>
             </div>
