--- a/Usuarios/templates/libros/buscar.html
+++ b/Usuarios/templates/libros/buscar.html
@@ -50,7 +50,7 @@
                         <span class="badge bg-{% if libro.estado == 'DISPONIBLE' %}success{% else %}warning{% endif %}">
                             {{ libro.get_estado_display }}
                         </span>
-                        <a href="{% url 'detalle_libro' libro.id %}" class="btn btn-primary btn-sm">Ver Detalles</a>
+                        <a href="{% url 'ver_libro' libro.id %}" class="btn btn-primary btn-sm">Ver Detalles</a>
                     </div>
                 </div>
             </div>
