--- a/Usuarios/templates/usuarios/dashboard.html
+++ b/Usuarios/templates/usuarios/dashboard.html
@@ -39,7 +39,7 @@
                         <div class="list-group">
                         {% for libro in libros %}
                             {% if libro.estado == 'DISPONIBLE' %}
-                                <a href="{% url 'detalle_libro' libro.id %}" class="list-group-item list-group-item-action">
+                                <a href="{% url 'ver_libro' libro.id %}" class="list-group-item list-group-item-action">
                                     <div class="d-flex w-100 justify-content-between">
                                         <h5 class="mb-1">{{ libro.titulo }}</h5>
                                         <small>{{ libro.autor }}</small>
