--- a/libros/templates/libros/confirmar_eliminar.html
+++ b/libros/templates/libros/confirmar_eliminar.html
@@ -16,7 +16,7 @@
                         <form method="POST">
                             {% csrf_token %}
                             <div class="d-flex justify-content-center gap-3">
-                                <a href="{% url 'detalle_libro' libro.id %}" class="btn btn-secondary">Cancelar</a>
+                                <a href="{% url 'ver_libro' libro.id %}" class="btn btn-secondary">Cancelar</a>
                                 <button type="submit" class="btn btn-danger">Confirmar Eliminación</button>
                             </div>
                         </form>
