--- a/libros/templates/libros/lista_prestamos.html
+++ b/libros/templates/libros/lista_prestamos.html
@@ -22,7 +22,7 @@
                 {% for prestamo in prestamos %}
                 <tr>
                     <td>
-                        <a href="{% url 'detalle_libro' prestamo.libro.id %}" class="text-decoration-none">
+                        <a href="{% url 'ver_libro' prestamo.libro.id %}" class="text-decoration-none">
                             {{ prestamo.libro.titulo }}
                         </a>
                     </td>
