--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'lista_libros' %}">Libros</a>
                     </li>
+                    {% if not user.is_staff %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'lista_prestamos' %}">Mis Préstamos</a>
+                    </li>
+                    {% endif %}
                     {% if user.is_authenticated %}
                         {% if user.is_superuser %}
                             <li class="nav-item">
@@ -42,9 +47,6 @@
                                 <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
                             </li>
                         {% endif %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'lista_prestamos' %}">Mis Préstamos</a>
-                        </li>
                     {% endif %}
                 </ul>
                 <ul class="navbar-nav ms-auto">
