--- a/libros/templates/libros/panel_admin.html
+++ b/libros/templates/libros/panel_admin.html
@@ -74,7 +74,7 @@
                     <h5 class="card-title"><i class="fas fa-users me-2"></i>Gestión de Usuarios</h5>
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="{% url 'registrar_bibliotecario' %}" class="btn btn-outline-primary w-100"><i class="fas fa-user-plus me-2"></i>Registrar Bibliotecario</a></li>
-                        <li class="mb-2"><a href="/admin/auth/user/" class="btn btn-outline-secondary w-100"><i class="fas fa-users-cog me-2"></i>Administrar Usuarios</a></li>
+                        <li class="mb-2"><a href="{% url 'gestionar_usuarios' %}" class="btn btn-outline-primary w-100"><i class="fas fa-users-cog me-2"></i>Gestionar Usuarios</a></li>
                     </ul>
                 </div>
             </div>
