--- a/Usuarios/templates/registration/registro.html
+++ b/Usuarios/templates/registration/registro.html
@@ -2,6 +2,10 @@
 
 {% block title %}Registro - Sistema de Biblioteca{% endblock %}
 
+{% block extra_js %}
+<script src="/static/js/registro.js"></script>
+{% endblock %}
+
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-6">
@@ -43,7 +47,7 @@
 
                     {% for field in form %}
                     {% if field.name != 'role' and field.name != 'codigo_autenticacion' %}
-                    <div class="mb-3">
+                    <div class="mb-3 {% if 'notificacion' in field.name %}notifications-group{% endif %}">
                         <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
                         {{ field.errors }}
                         {{ field }}
